--- a/TFG/index.html
+++ b/TFG/index.html
@@ -109,7 +109,7 @@
             </div>
         </div>
 
-        <div class="container" id="container" display="none">
+        <div class="logCont" id="logCont" >
             <section id="login" style="display:none">
                 <form onsubmit="return login()" method="POST" class="login-form">
                     <label for="usuario">Usuario</label>
@@ -121,9 +121,8 @@
                 <a href="../editUsu/nuevo.php">Crear nuevo usuario</a>
             </section>
         </div>
-    </div>
 
-    
+    </div>
 
 </body>
 
