--- a/TFG/index.html
+++ b/TFG/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WikiOnePiece</title>
     <link rel="stylesheet" href="style.css">
+    <script type="text/javascript" src="session.js"></script>
 </head>
 <body>
     <div class="bg_img">
@@ -14,19 +15,20 @@
             <img src="img/Site-logo.png" alt="logo">
         </div>
         <nav>
-                <a href="#" class="navbtn"><button>Iniciar Sesion</button></a>
+            <button type="button" onclick="login()" id="session">Iniciar Sesion</button>
+            <button type="button" onclick="retur()" id="back" style="display:none">Volver atras</button>
         </nav>
         
     </header>
 
-    <div class="wrapper">
+    <div class="wrapper" id="wrapper">
         <div class="container">
             <input type="radio" name="slide" id="c1" checked>
             <label for="c1" class="card">
                 <div class="row">
                     <div class="icon">1</div> 
                     <div class="description">
-                        <h4>Winter</h4>
+                        <h4>PERSONAJES</h4>
                         <p>Winter has so much to offer -
                          creative activities</p>
                     </div>
@@ -37,9 +39,8 @@
                 <div class="row">
                     <div class="icon">2</div> 
                     <div class="description">
-                        <h4>Digital Technology</h4>
-                        <p>Gets better every day -
-                         stay tuned</p>
+                        <h4>LUGARES</h4>
+                        <p>SEE MORE</p>
                     </div>
                 </div>
             </label>
@@ -48,8 +49,8 @@
                 <div class="row">
                     <div class="icon">3</div> 
                     <div class="description">
-                        <h4>Globalization</h4>
-                        <p>Help people all over the world</p>
+                        <h4>CREWS</h4>
+                        <p>SEE MORE</p>
                     </div>
                 </div>
             </label>
@@ -58,9 +59,8 @@
                 <div class="row">
                     <div class="icon">4</div> 
                     <div class="description">
-                        <h4>New technologies</h4>
-                        <p>Space engineering becomes
-                         more and more advanced</p>
+                        <h4>BARCOS</h4>
+                        <p>SEE MORE</p>
                     </div>
                 </div>
             </label>
@@ -69,9 +69,8 @@
                 <div class="row">
                     <div class="icon">5</div> 
                     <div class="description">
-                        <h4>Winter</h4>
-                        <p>Winter has so much to offer -
-                         creative activities</p>
+                        <h4>ARMAS</h4>
+                        <p>SEE MORE</p>
                     </div>
                 </div>
             </label>
@@ -80,9 +79,8 @@
                 <div class="row">
                     <div class="icon">6</div> 
                     <div class="description">
-                        <h4>Winter</h4>
-                        <p>Winter has so much to offer -
-                         creative activities</p>
+                        <h4>FRUTAS</h4>
+                        <p>SEE MORE</p>
                     </div>
                 </div>
             </label>
@@ -91,9 +89,8 @@
                 <div class="row">
                     <div class="icon">7</div> 
                     <div class="description">
-                        <h4>Winter</h4>
-                        <p>Winter has so much to offer -
-                         creative activities</p>
+                        <h4>DIALS</h4>
+                        <p>SEE MORE</p>
                     </div>
                 </div>
             </label>
@@ -102,13 +99,24 @@
                 <div class="row">
                     <div class="icon">8</div> 
                     <div class="description">
-                        <h4>Winter</h4>
-                        <p>Winter has so much to offer -
-                         creative activities</p>
+                        <h4>HAKIS</h4>
+                        <p>SEE MORE</p>
                     </div>
                 </div>
             </label>
         </div>
+    </div>
+    <div class="logCont" id="logCont" >
+        <section id="login" style="display:none">
+            <form onsubmit="return login()" method="POST" class="login-form">
+                <label for="usuario">Usuario</label>
+                <input id="usuario" name='usuario' type="text">
+                <label for="clave">Clave</label>
+                <input id="clave" name="clave" type="password">
+                <input type="submit" value="Iniciar sesión">
+            </form>
+            <a href="../editUsu/nuevo.php">Crear nuevo usuario</a>
+        </section>
     </div>
     </div>   
 
