--- a/TFG/index.html
+++ b/TFG/index.html
@@ -14,7 +14,7 @@
         <header>
 
             <div class="logo">
-                <img src="img/Site-logo.png" alt="logo">
+                <img src="img/Site-logo.png" onclick="retur()" alt="logo">
             </div>
             <nav>
 
@@ -32,7 +32,7 @@
                         <div class="icon">1</div>
                         <div class="description">
                             <h4>PERSONAJES</h4>
-                            <a>SEE MORE</a>
+                            <a href="personajes.html">SEE MORE</a>
                         </div>
                     </div>
                 </label>
@@ -118,7 +118,7 @@
                     <input id="clave" name="clave" type="password">
                     <input type="submit" value="Iniciar sesión">
                 </form>
-                <a href="../editUsu/nuevo.php">Crear nuevo usuario</a>
+                <a href="editUsu/nuevo.php">Crear nuevo usuario</a>
             </section>
         </div>
 
