add del buscador en personajes
hemos add el buscador en personajes .html y js, hay que ponerlo en el resto de html y js

--- a/TFG/vista/armas.html
+++ b/TFG/vista/armas.html
@@ -4,9 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personajes</title>
+    <title>Barcos</title>
     <link rel="stylesheet" href="../style.css">
-    <link rel="stylesheet" href="style.css">
     <script type="text/javascript" src="session.js"></script>
     <script type="text/javascript" src="scriptArm.js" defer></script>
 </head>
@@ -23,27 +22,11 @@
             </nav>
         </header>
 
-        <div class="contenedor">
-            <div class="card">
-              <div class="row">
-                <div class="description">
-                  <h4>PERSONAJES</h4>
-                  <a href="vista/personajes.html">SEE MORE</a>
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="row">
-                <div class="description">
-                  <h4>OTRA SECCIÓN</h4>
-                  <a href="vista/otra_seccion.html">SEE MORE</a>
-                </div>
-              </div>
-            </div>
-          </div>
-          
+        <div class="content-wrapper">
+            <div class="container">
 
-
+            </div>
+        </div>
 
         <div class="logCont" id="logCont">
             <section id="login" style="display:none">
