--- a/TFG/vista/crew.html
+++ b/TFG/vista/crew.html
@@ -26,20 +26,28 @@
         const characterId = urlParams.get('id');
 
         // Hacer una solicitud a la API con el ID del personaje y mostrar los detalles
-        fetch(`https://api.api-onepiece.com/v2/characters/en/${characterId}`)
+        fetch(`https://api.api-onepiece.com/v2/crews/en/${characterId}`)
             .then(response => response.json())
             .then(data => {
                 const personajeDetInfo = document.getElementById('personaje-det');
+                var yonko = "No son uno de los 4 emperadores";
+                if (data.is_yonko === true) {
+                  var yonko = "Son uno de los 4 emperadores";
+                }
+                var estatus = "Desconocido";
+                if (data.status === "assets") {
+                  var estatus = "Estan activos";
+                }else if (data.status === "dissolved") {
+                  var estatus = "Estan disueltos";
+                }
                 personajeDetInfo.innerHTML = `               
         <h2>Nombre: ${data.name}</h2>
-        <p>Puesto: ${data.job}</p>
-        <p>Altura: ${data.size}</p>
-        <p>Cumple: ${data.birthday}</p>
-        <p>Edad: ${data.age}</p>
-        <p>Recompensa: ${data.bounty}</p>
-        <p>Estatus: ${data.status}</p>
-        <p>Nombre de la crew: ${data.crew.name}</p>
-        <a href="personajes.html" class="button">back</a>
+        <p>Estatus: ${estatus}</p>
+        <p>Numero integrantes: ${data.number}</p>
+        <p>Nombre Roman: ${data.roman_name}</p>
+        <p>Total bounty: ${data.total_prime}</p>
+        <p>Estatus de emperador: ${yonko}</p>
+        <a href="crews.html" class="button">back</a>
       `;
             })
             .catch(error => console.error('Error al cargar los detalles:', error));
