--- a/TFG/vista/crews.html
+++ b/TFG/vista/crews.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crews</title>
     <link rel="stylesheet" href="../style.css">
-    <script type="text/javascript" src="session.js"></script>
-    <script type="text/javascript" src="scriptCre.js" defer></script>
+    <script type="text/javascript" src="js/scriptCre.js" defer></script>
 </head>
 
 <body>
