--- a/TFG/vista/localizaciones.html
+++ b/TFG/vista/localizaciones.html
@@ -7,15 +7,14 @@
     <title>Localizaciones</title>
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="stbuscador.css">
-    <script type="text/javascript" src="session.js"></script>
-    <script type="text/javascript" src="scriptLoc.js" defer></script>
+    <script type="text/javascript" src="js/scriptLoc.js" defer></script>
 </head>
 
 <body>
     <div class="bg_img">
         <header>
             <div class="logo">
-                <a href="../index.html"><img src="img/Site-logo.png" alt="logo"></a>
+                <a href="../index.html"><img src="../img/Site-logo.png" alt="logo"></a>
             </div>
             <nav>
                 <button type="button" onclick="login()" id="session">Iniciar Sesion</button>
