--- a/TFG/vista/arma.html
+++ b/TFG/vista/arma.html
@@ -1,7 +1,5 @@
 <!-- verificacion con el php -->
 
-<?php include_once "verificacion.php"; ?>
-
 <!DOCTYPE html>
 <html lang="es">
 
@@ -9,14 +7,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylePer.css">
-    <title>Detalles del Personaje</title>
+    <title>Detalles del arma</title>
 </head>
 
 <body>
 
 
     <div class="contenedor-centralizado">
-        <h1 class="titulo-registro">Detalles del Personaje</h1>
+        <h1 class="titulo-registro">Detalles del Barco</h1>
         <div id="personaje-det">
           <!-- Aquí se cargarán los detalles del personaje -->
         </div>
@@ -25,23 +23,20 @@
     <script>
         // Obtener el ID del personaje de la URL
         const urlParams = new URLSearchParams(window.location.search);
-        const characterId = urlParams.get('id');
+        const characterId = urlParams.get('name');
 
         // Hacer una solicitud a la API con el ID del personaje y mostrar los detalles
-        fetch(`https://api.api-onepiece.com/v2/characters/en/${characterId}`)
+        fetch(`https://api.api-onepiece.com/v2/swords/en/${characterId}`)
             .then(response => response.json())
             .then(data => {
                 const personajeDetInfo = document.getElementById('personaje-det');
                 personajeDetInfo.innerHTML = `               
         <h2>Nombre: ${data.name}</h2>
-        <p>Puesto: ${data.job}</p>
-        <p>Altura: ${data.size}</p>
-        <p>Cumple: ${data.birthday}</p>
-        <p>Edad: ${data.age}</p>
-        <p>Recompensa: ${data.bounty}</p>
-        <p>Estatus: ${data.status}</p>
-        <p>Nombre de la crew: ${data.crew.name}</p>
-        <a href="personajes.html" class="button">back</a>
+        <p>Nombre Roman: ${data.roman_name}</p>
+        <p>Tipo de arma: ${data.type}</p>
+        <p>Nombre de la crew: ${data.category}</p>
+        <p>Si esta destruida o no: ${data.isDestroy}</p>
+        <a href="armas.html" class="button">back</a>
       `;
             })
             .catch(error => console.error('Error al cargar los detalles:', error));
