--- a/TFG/vista/barcos.html
+++ b/TFG/vista/barcos.html
@@ -7,7 +7,7 @@
     <title>Barcos</title>
     <link rel="stylesheet" href="../style.css">
     <script type="text/javascript" src="session.js"></script>
-    <script type="text/javascript" src="scriptBar.js" defer></script>
+    <script type="text/javascript" src="js/scriptBar.js" defer></script>
 </head>
 
 <body>
