--- a/TFG/vista/personajes.html
+++ b/TFG/vista/personajes.html
@@ -7,8 +7,8 @@
     <title>Personajes</title>
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="stbuscador.css">
-    <script type="text/javascript" src="session.js"></script>
-    <script type="text/javascript" src="scriptPer.js" defer></script>
+    <!-- <link rel="stylesheet" href="style.css"> -->
+    <script type="text/javascript" src="js/scriptPer.js" defer></script>
 </head>
 
 <body>
@@ -18,7 +18,10 @@
                 <a href="../index.html"><img src="../img/Site-logo.png" alt="logo"></a>
             </div>
             <nav>
-                <button type="button" onclick="login()" id="session">Iniciar Sesion</button>
+                <form action="login/login.html" method="post">
+                    <button type="submit">Iniciar session</button>
+                </form>
+                
             </nav>
         </header>
 
@@ -39,6 +42,62 @@
             <br>
         </div>
     </div>
+
+    <div id="comment-section">
+        <!-- Sección de comentarios -->
+        <div id="comments-list">
+            <!-- Aquí se mostrarán los comentarios -->
+        </div>
+
+        <!-- Formulario de comentarios -->
+        <form id="comment-form">
+            <textarea id="comment-text" placeholder="Escribe tu comentario..." required></textarea>
+            <button type="submit">Comentar</button>
+        </form>
+    </div>
+
+    <script>
+        // Simulación de comentarios
+        var comments = [
+            { user: "Usuario1", content: "¡Este es un comentario genial!" },
+            { user: "Usuario2", content: "Me encanta este sitio web." }
+            // Puedes agregar más comentarios si lo deseas
+        ];
+
+        // Función para mostrar los comentarios en la página
+        function displayComments() {
+            var commentsList = document.getElementById('comments-list');
+            commentsList.innerHTML = ''; // Limpiamos los comentarios actuales
+
+            comments.forEach(function(comment) {
+                var commentDiv = document.createElement('div');
+                commentDiv.textContent = comment.user + ': ' + comment.content;
+                commentsList.appendChild(commentDiv);
+            });
+        }
+
+        // Mostrar los comentarios al cargar la página
+        displayComments();
+
+        // Manejar el envío de comentarios
+        var commentForm = document.getElementById('comment-form');
+        commentForm.addEventListener('submit', function(event) {
+            event.preventDefault(); // Evitar el comportamiento predeterminado del formulario
+
+            // Obtener el texto del comentario
+            var commentText = document.getElementById('comment-text').value;
+
+            // Aquí deberías enviar el comentario al servidor si el usuario está logado
+            // y luego actualizar la lista de comentarios. Por ahora, simplemente agregaremos el comentario a la lista simulada.
+            var newComment = { user: "Usuario Actual", content: commentText };
+            comments.push(newComment);
+            displayComments();
+
+            // Limpiar el campo de texto después de enviar el comentario
+            document.getElementById('comment-text').value = '';
+        });
+    </script>
+
 </body>
 
 </html>
