--- a/TFG/index.html
+++ b/TFG/index.html
@@ -16,10 +16,9 @@
             <div class="logo">
                 <img src="img/Site-logo.png" onclick="retur()" alt="logo">
             </div>
-            <nav>
-                <button type="button" onclick="login()" id="session">Iniciar Sesion</button>
-                <button type="button" onclick="retur()" id="back" style="display:none">Volver atras</button>
-            </nav>
+            <form action="vista/login/login.html" method="post">
+                <button type="submit">Iniciar session</button>
+            </form>
 
         </header>
 
@@ -118,7 +117,7 @@
             <div class="ola" id="ola2"></div>
             <div class="ola" id="ola3"></div>
             <div class="ola" id="ola4"></div>
-        </div>
+        </div> 
     </footer>
 </body>
 
