--- a/TFG/index.html
+++ b/TFG/index.html
@@ -16,9 +16,13 @@
             <div class="logo">
                 <img src="img/Site-logo.png" onclick="retur()" alt="logo">
             </div>
+            <form action="#" method="post">
+                <button type="submit">Tienda</button>
+            </form>
             <form action="vista/login/login.html" method="post">
                 <button type="submit">Iniciar session</button>
             </form>
+
 
         </header>
 
@@ -39,7 +43,7 @@
                     <div class="row">
                         <div class="icon">2</div>
                         <div class="description">
-                            <h4>LOCALIZACIONES</h4>
+                            <h4>LUGARES</h4>
                             <a href="vista/localizaciones.html">SEE MORE</a>
                         </div>
                     </div>
@@ -101,6 +105,16 @@
                         <div class="description">
                             <h4>HAKIS</h4>
                             <a href="vista/hakis.html">SEE MORE</a>
+                        </div>
+                    </div>
+                </label>
+                <input type="radio" name="slide" id="c9" checked>
+                <label for="c9" class="card">
+                    <div class="row">
+                        <div class="icon">9</div>
+                        <div class="description">
+                            <h4>Eventos</h4>
+                            <a href="#">SEE MORE</a>
                         </div>
                     </div>
                 </label>
